# tidal-midi-generic

./: readme.md  tidal-midi-generic.cabal
Sound/Tidal/MIDI/: CustomParams.hs  GenericMIDI.hs
